Online CV basics

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Kees Postma</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Roboto font from Google -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <!-- Font-awesome -->
+    <script src="https://use.fontawesome.com/34b0fb09eb.js"></script>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="page-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <h1 class="text-center">Kees Postma</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <div>
+              <h2>A little bit about me</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eos nesciunt voluptas eveniet, quibusdam debitis magni quis accusantium saepe dolores minus facilis porro beatae minima commodi excepturi hic sapiente, velit.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <div>
+              <h2>Professional experience</h2>
+              <div class="flex-box flex-between flex-vertical-center">
+                <img class="logo" src="images/ohpen-logo.png" alt="Company logo of Ohpen">
+                <div class="flex-grow">
+                  <h3>Business Analyst</h3>
+                  <p>Returned to the company full-time after finishing university and a successful internship in 2011</p>
+                  <p>Worked closely with developers in writing functional specifications and testing new releases</p>
+                </div>
+                <div>
+                  <i class="fa fa-map-marker"></i>
+                  <p>Amsterdam</p>
+                  <i class="fa fa-calendar"></i>
+                  <p>June 2012 - July 2013</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous">
+    </script>
+    <!-- Bootstrap Javascript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous">
+    </script>
+  </body>
+</html>
