Adds all images project and makes solid start on CV page

--- a/index.html
+++ b/index.html
@@ -6,48 +6,125 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Roboto font from Google -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <!-- Font-awesome -->
     <script src="https://use.fontawesome.com/34b0fb09eb.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="page-wrapper">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <h1 class="text-center">Kees Postma</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-3 col-sm-offset-1">
+          <div class="fixed-container">
+            <div class="avatar">
+
+            </div>
             <div>
-              <h2>A little bit about me</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eos nesciunt voluptas eveniet, quibusdam debitis magni quis accusantium saepe dolores minus facilis porro beatae minima commodi excepturi hic sapiente, velit.</p>
+              <h1>Kees Postma</h1>
+            </div>
+            <div class="nav-tabs hidden-xs hidden-sm">
+              <a href="#about">
+                <div class="nav-tab active">About me</div>
+              </a>
+              <a href="#stack">
+                <div class="nav-tab">Technology stack</div>
+              </a>
+              <a href="#projects" id="projects">
+                <div class="nav-tab">Side projects</div>
+              </a>
+              <a href="#experience" id="experience">
+                <div class="nav-tab">Professional experience</div>
+              </a>
+              <a href="#education" id="education">
+                <div class="nav-tab">Education</div>
+              </a>
+              <a href="#achievements" id="achievements">
+                <div class="nav-tab">Achievements</div>
+              </a>
+              <a href="contact" id="contact">
+                <div class="nav-tab">Let's talk</div>
+              </a>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-7">
+          <!-- About me -->
+          <a name="about" class="anchor"></a>
+          <div class="info-container">
+            <h2>About me</h2>
+            <p>I’m a junior-level full stack web developer looking to gain more experience and further improve my development skills. Before spending the last 3 years as a professional racing sailor I worked as a business analyst developing cloud banking software. I have a degree in Investment and Financial Risk Management.</p>
+          </div>
+          <!-- Technology stack -->
+          <a name="stack" class="anchor"></a>
+          <div class="info-container">
+            <h2>Technology stack</h2>
             <div>
-              <h2>Professional experience</h2>
-              <div class="flex-box flex-between flex-vertical-center">
-                <img class="logo" src="images/ohpen-logo.png" alt="Company logo of Ohpen">
-                <div class="flex-grow">
-                  <h3>Business Analyst</h3>
-                  <p>Returned to the company full-time after finishing university and a successful internship in 2011</p>
-                  <p>Worked closely with developers in writing functional specifications and testing new releases</p>
+              <!-- Languages -->
+              <h3>Languages</h3>
+              <hr>
+              <div class="code-container">
+                <div class="code-box">
+                  <img class="code-icon" src="images/ruby.png" alt="">
+                  <h4>Ruby</h4>
+                  <p>(comfortable)</p>
                 </div>
-                <div>
-                  <i class="fa fa-map-marker"></i>
-                  <p>Amsterdam</p>
-                  <i class="fa fa-calendar"></i>
-                  <p>June 2012 - July 2013</p>
+                <div class="code-box">
+                  <img class="code-icon" src="images/html.png" alt="">
+                  <h4>HTML</h4>
+                  <p>(comfortable)</p>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/css.png" alt="">
+                  <h4>CSS</h4>
+                  <p>(comfortable)</p>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/javascript.png" alt="">
+                  <h4>Javascript</h4>
+                  <p>(intermediate)</p>
+                </div>
+              </div>
+              <!-- Frameworks -->
+              <h3>Frameworks</h3>
+              <hr>
+              <div class="code-container">
+                <div class="code-box">
+                  <img class="code-icon" src="images/rails.png" alt="">
+                  <h4>Rails</h4>
+                  <p>(comfortable)</p>
+                </div>
+              </div>
+              <h3>Libraries</h3>
+              <hr>
+              <div class="code-container">
+                <div class="code-box">
+                  <img class="code-icon" src="images/bootstrap.png" alt="">
+                  <h4>Bootstrap</h4>
+                  <p>(comfortable)</p>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/jquery.png" alt="">
+                  <h4>jQuery</h4>
+                  <p>(intermediate)</p>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/react.png" alt="">
+                  <h4>React</h4>
+                  <p>(beginner)</p>
+                </div>
+              </div>
+              <h3>Database</h3>
+              <hr>
+              <div class="code-container">
+                <div class="code-box">
+                  <img class="code-icon" src="images/postgresql.png" alt="">
+                  <h4>PostgreSQL</h4>
+                  <p>(comfortable)</p>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+      </div>
       </div>
     </div>
 
@@ -61,5 +138,6 @@
       integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
       crossorigin="anonymous">
     </script>
+    <script src="animation.js"></script>
   </body>
 </html>
