Fixes glitch with CSS image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <p>(comfortable)</p>
                 </div>
                 <div class="code-box">
-                  <img class="code-icon" src="images/css.png" alt="">
+                  <img class="code-icon" src="images/CSS.png" alt="">
                   <h4>CSS</h4>
                   <p>(comfortable)</p>
                 </div>
