Builds projects and experience sections

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <div class="container">
       <div class="row">
+        <!-- Avatar, name, and menu -->
         <div class="col-xs-12 col-sm-3 col-sm-offset-1">
           <div class="fixed-container">
             <div class="avatar">
@@ -47,6 +48,7 @@
             </div>
           </div>
         </div>
+        <!-- Content -->
         <div class="col-xs-12 col-sm-7">
           <!-- About me -->
           <a name="about" class="anchor"></a>
@@ -120,6 +122,60 @@
                   <img class="code-icon" src="images/postgresql.png" alt="">
                   <h4>PostgreSQL</h4>
                   <p>(comfortable)</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Side projects -->
+          <a name="projects" class="anchor"></a>
+          <div class="info-container">
+            <h2>Side projects</h2>
+            <div class="project-box flex-box">
+              <img src="images/fixes.jpg" alt="" class="project-thumbnail">
+              <div class="project-info flex-auto-width">
+                <h3>playfixes.com</h3>
+                <p>A word game founded by some of my classmates at Le Wagon’s
+                  coding bootcamp. After the course I started working with the
+                  Fixes team to make the game even better.</p>
+              </div>
+            </div>
+            <div class="project-box flex-box">
+              <img src="images/brainpowered.jpg" alt="" class="project-thumbnail">
+              <div class="project-info flex-auto-width">
+                <h3>brainpowered.me</h3>
+                <p>Together with two of my classmates at Le Wagon we built and
+                   launched this web app within 10 working days. Students can
+                   contribute to real projects by real companies and have a better chance at getting hired.</p>
+              </div>
+            </div>
+            <div class="project-box flex-box">
+              <img src="images/cocktail.jpg" alt="" class="project-thumbnail">
+              <div class="project-info flex-auto-width">
+                <h3>mr-cocktail-kp09.herokuapp.com</h3>
+                <p>A fun app I built for my girlfriend and I, where we can
+                   store cocktail recipes that we have made and like and share
+                   them with friends.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Professional experience -->
+          <a name="experience" class="anchor"></a>
+          <div class="info-container">
+            <h2>Professional experience</h2>
+            <div class="flex-box">
+              <div class="company-icon-box flex-box flex-vertical-center">
+                <img src="images/lewagon.png" alt="" class="company-icon">
+              </div>
+              <div class="flex-auto-width">
+                <h3>Teaching Assistant</h3>
+                <h4>Le Wagon</h4>
+                <p>Occasional work, helping students at Le Wagon through their
+                  daily coding challenges and with their final projects.</p>
+                <hr>
+                <div class="flex-box flex-between">
+                  <span>lewagon.com</span>
+                  <span>August 2017</span>
+                  <span>London, UK</span>
                 </div>
               </div>
             </div>
