Finishes the most important sections of the page

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
               <a href="#about">
                 <div class="nav-tab active">About me</div>
               </a>
+              <a href="#experience" id="experience">
+                <div class="nav-tab">Experience</div>
+              </a>
               <a href="#stack">
-                <div class="nav-tab">Technology stack</div>
+                <div class="nav-tab">Tech stack</div>
               </a>
               <a href="#projects" id="projects">
                 <div class="nav-tab">Side projects</div>
-              </a>
-              <a href="#experience" id="experience">
-                <div class="nav-tab">Professional experience</div>
               </a>
               <a href="#education" id="education">
                 <div class="nav-tab">Education</div>
@@ -50,17 +50,201 @@
         </div>
         <!-- Content -->
         <div class="col-xs-12 col-sm-7">
+
           <!-- About me -->
           <a name="about" class="anchor"></a>
           <div class="info-container">
             <h2>About me</h2>
-            <p>I’m a junior-level full stack web developer looking to gain more experience and further improve my development skills. Before spending the last 3 years as a professional racing sailor I worked as a business analyst developing cloud banking software. I have a degree in Investment and Financial Risk Management.</p>
+            <p>I’m a junior-level full stack web developer. Before spending the
+              last 3 years as a professional racing sailor I worked as a
+              business analyst developing cloud banking software. I have a
+              degree in Investment and Financial Risk Management.</p>
           </div>
+
+          <!-- Professional experience -->
+          <a name="experience" class="anchor"></a>
+          <div class="info-container">
+            <h2>Experience</h2>
+            <!-- Le Wagon -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Teaching Assistant</h3>
+                    <h4>Le Wagon</h4>
+                    <p>Occasional work, helping students at Le Wagon through their
+                      daily coding challenges and with their final projects.</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/lewagon.png);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>August 2017</span>
+                <span>London, UK</span>
+              </div>
+            </div>
+            <!-- Team Maverick -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Professional Sailor</h3>
+                    <h4>Team Maverick</h4>
+                    <p>Joined the team to help build the boat, then extensively
+                      campaigned it in the Mediterranean, Caribbean, and the UK.
+                      Achieved class wins in the Rolex Middle Sea Race and the RORC
+                      Transatlantic Race</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/maverick.jpeg);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>September 2015 - Present</span>
+                <span>Global</span>
+              </div>
+            </div>
+            <!-- Garmin -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Global Brand Ambassador</h3>
+                    <h4>Garmin</h4>
+                    <p>Represented the global leader in satellite navigation
+                      during the Clipper Round the World Yacht Race. Created
+                      content in the form of blogs, photography and video, and
+                      hosted corporate relations on sailing days</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/garmin.png);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>September 2013 - July 2014</span>
+                <span>Global</span>
+              </div>
+            </div>
+            <!-- Clipper -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Circumnavigator</h3>
+                    <h4>Clipper Round the World Yacht Race</h4>
+                    <p>Spotted a posted on the London Underground Signed up to
+                      the race having never sailed before and subsequently
+                      completed the 55,000-mile circumnavigation as watch
+                      captain and second-in-command</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/clipper.jpeg);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>September 2013 - July 2014</span>
+                <span>Global</span>
+              </div>
+            </div>
+            <!-- Ohpen (full-time)-->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Business Analyst</h3>
+                    <h4>Ohpen</h4>
+                    <p>Returned to the company full-time after finishing
+                      university and a successful internship in 2011. Worked
+                      closely with developers in writing functional
+                      specifications and testing new releases.</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/ohpen.png);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>June 2012 - July 2013</span>
+                <span>Amsterdam, NL</span>
+              </div>
+            </div>
+            <!-- Coresta -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Trainee Junior Consultant</h3>
+                    <h4>Coresta Group</h4>
+                    <p>Returned for a second summer internship assisting
+                      management with finding investors. Achieved a significant
+                      improvement in operational efficiency by streamlining
+                      spreadsheets using VBA.</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/coresta.png);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>July - September 2011</span>
+                <span>Eindhoven, NL</span>
+              </div>
+            </div>
+            <!-- Ohpen (internship) -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Summer Intern</h3>
+                    <h4>Ohpen</h4>
+                    <p>Started in Operations processing investment transactions
+                      and conducting portfolio research for clients. Progressed
+                      to the development team and assisted in writing functional
+                      specifications for new software.</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/ohpen.png);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>May - July 2011</span>
+                <span>Amsterdam, NL</span>
+              </div>
+            </div>
+            <!-- Coresta internship -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Trainee Junior Consultant</h3>
+                    <h4>Coresta Group</h4>
+                    <p>Carried out detailed cash flow analysis for the firm’s
+                      own new real estate funds and conducted market and
+                      financial analysis on clients’ prospective developments</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/coresta.png);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>June - September 2010</span>
+                <span>Eindhoven, NL</span>
+              </div>
+            </div>
+          </div>
+
           <!-- Technology stack -->
           <a name="stack" class="anchor"></a>
           <div class="info-container">
-            <h2>Technology stack</h2>
-            <div>
+            <h2>Tech stack</h2>
+            <div class="tech-stack">
               <!-- Languages -->
               <h3>Languages</h3>
               <hr>
@@ -126,13 +310,14 @@
               </div>
             </div>
           </div>
+
           <!-- Side projects -->
           <a name="projects" class="anchor"></a>
           <div class="info-container">
             <h2>Side projects</h2>
             <div class="project-box flex-box">
-              <img src="images/fixes.jpg" alt="" class="project-thumbnail">
-              <div class="project-info flex-auto-width">
+              <div class="project-thumbnail" style="background-image: url(images/fixes.jpg);"></div>
+              <div class="project-info">
                 <h3>playfixes.com</h3>
                 <p>A word game founded by some of my classmates at Le Wagon’s
                   coding bootcamp. After the course I started working with the
@@ -140,8 +325,8 @@
               </div>
             </div>
             <div class="project-box flex-box">
-              <img src="images/brainpowered.jpg" alt="" class="project-thumbnail">
-              <div class="project-info flex-auto-width">
+              <div class="project-thumbnail" style="background-image: url(images/brainpowered.jpg);"></div>
+              <div class="project-info">
                 <h3>brainpowered.me</h3>
                 <p>Together with two of my classmates at Le Wagon we built and
                    launched this web app within 10 working days. Students can
@@ -149,8 +334,8 @@
               </div>
             </div>
             <div class="project-box flex-box">
-              <img src="images/cocktail.jpg" alt="" class="project-thumbnail">
-              <div class="project-info flex-auto-width">
+              <div class="project-thumbnail" style="background-image: url(images/cocktail.jpg);"></div>
+              <div class="project-info">
                 <h3>mr-cocktail-kp09.herokuapp.com</h3>
                 <p>A fun app I built for my girlfriend and I, where we can
                    store cocktail recipes that we have made and like and share
@@ -158,29 +343,73 @@
               </div>
             </div>
           </div>
-          <!-- Professional experience -->
-          <a name="experience" class="anchor"></a>
+
+          <!-- Education -->
+          <a name="education" class="anchor"></a>
           <div class="info-container">
-            <h2>Professional experience</h2>
-            <div class="flex-box">
-              <div class="company-icon-box flex-box flex-vertical-center">
-                <img src="images/lewagon.png" alt="" class="company-icon">
-              </div>
-              <div class="flex-auto-width">
-                <h3>Teaching Assistant</h3>
-                <h4>Le Wagon</h4>
-                <p>Occasional work, helping students at Le Wagon through their
-                  daily coding challenges and with their final projects.</p>
-                <hr>
-                <div class="flex-box flex-between">
-                  <span>lewagon.com</span>
-                  <span>August 2017</span>
-                  <span>London, UK</span>
+            <h2>Education</h2>
+            <!-- Le Wagon -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Full-stack web development bootcamp</h3>
+                    <h4>Le Wagon</h4>
+                    <p>Succesfully completed the nine-week full-stack web development
+                      bootcamp and launched a complete MVP within 10 working days.</p>
+                  </div>
                 </div>
+                <div class="company-icon-box" style="background-image: url(images/lewagon.png);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>April - June 2017</span>
+                <span>London, UK</span>
+              </div>
+            </div>
+            <!-- Cass Business School -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>BSc Investment and Financial Risk Management</h3>
+                    <h4>Cass Business School</h4>
+                    <p>Graduated with 1st class degree with Honours.</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/cass.png);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>2009 - 2012</span>
+                <span>London, UK</span>
+              </div>
+            </div>
+            <!-- Antwerp International School -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>International Baccalaureate Diploma</h3>
+                    <h4>Antwerp International School</h4>
+                    <p>Obtained the IB Diploma scoring 42 out of 45 points</p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="background-image: url(images/ais.png);">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>2007 - 2009</span>
+                <span>Antwerp, BE</span>
               </div>
             </div>
           </div>
-      </div>
+          <div class="space">
+          </div>
+        </div>
       </div>
     </div>
 
