Cleans up some styling and removes unused nav items

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <!-- Avatar, name, and menu -->
         <div class="col-xs-12 col-sm-3 col-sm-offset-1">
           <div class="fixed-container">
-            <div class="avatar">
-
+            <div class="avatar-container flex-box flex-around">
+              <div class="avatar">
+              </div>
             </div>
             <div>
               <h1>Kees Postma</h1>
@@ -39,12 +40,12 @@
               <a href="#education" id="education">
                 <div class="nav-tab">Education</div>
               </a>
-              <a href="#achievements" id="achievements">
+              <!-- <a href="#achievements" id="achievements">
                 <div class="nav-tab">Achievements</div>
               </a>
               <a href="contact" id="contact">
                 <div class="nav-tab">Let's talk</div>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
@@ -55,10 +56,21 @@
           <a name="about" class="anchor"></a>
           <div class="info-container">
             <h2>About me</h2>
-            <p>I’m a junior-level full stack web developer. Before spending the
-              last 3 years as a professional racing sailor I worked as a
-              business analyst developing cloud banking software. I have a
-              degree in Investment and Financial Risk Management.</p>
+            <p> I’m a junior-level full stack web developer. Ruby on Rails is my
+                main language/framework combination but I am currently learning
+                React javascript.
+                <br><br>
+                Before spending the last 3 years as a professional racing sailor
+                I worked as a business analyst developing cloud banking software.
+                Besides that I also have a degree in Investment and Financial
+                Risk Management.
+                <br><br>
+                Check out some more info below, and if you're interested in working together, please get in touch!
+                <br><br>
+                +44 (0)74 0772 1911
+                <br>
+                kk.postma@gmail.com
+            </p>
           </div>
 
           <!-- Professional experience -->
