Avatar now square

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Avatar, name, and menu -->
         <div class="col-xs-12 col-sm-3 col-sm-offset-1">
           <div class="fixed-container">
-            <div class="avatar-container flex-box flex-around">
+            <div class="avatar-container">
               <div class="avatar">
               </div>
             </div>
