Failed attempt to bind active menu to scrolling

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
               <a href="#about">
                 <div class="nav-tab active">About me</div>
               </a>
-              <a href="#experience" id="experience">
+              <a href="#experience">
                 <div class="nav-tab">Experience</div>
               </a>
               <a href="#stack">
                 <div class="nav-tab">Tech stack</div>
               </a>
-              <a href="#projects" id="projects">
+              <a href="#projects">
                 <div class="nav-tab">Side projects</div>
               </a>
-              <a href="#education" id="education">
+              <a href="#education">
                 <div class="nav-tab">Education</div>
               </a>
               <!-- <a href="#achievements" id="achievements">
