--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Kees Postma</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Roboto font from Google -->
@@ -78,7 +80,7 @@
           <div class="info-container">
             <h2>Experience</h2>
             <!-- Le Wagon -->
-            <div class="experience-box">
+            <!-- <div class="experience-box">
               <div class="flex-box">
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
@@ -96,7 +98,7 @@
                 <span>August 2017</span>
                 <span>London, UK</span>
               </div>
-            </div>
+            </div> -->
             <!-- Team Maverick -->
             <div class="experience-box">
               <div class="flex-box">
