Moves favicon to home repo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Kees Postma</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Roboto font from Google -->
@@ -58,20 +58,30 @@
           <a name="about" class="anchor"></a>
           <div class="info-container">
             <h2>About me</h2>
-            <p> I’m a junior-level full stack web developer. Ruby on Rails is my
-                main language/framework combination but I am currently learning
-                React javascript.
+            <p> For the past three years I have been pursuing a career in yacht
+                racing, with an ultimate ambition of competing in and winning
+                the Volvo Ocean Race. To me, offshore yacht racing is the
+                ultimate combination of competition, adventure, and challenge.
                 <br><br>
-                Before spending the last 3 years as a professional racing sailor
-                I worked as a business analyst developing cloud banking software.
-                Besides that I also have a degree in Investment and Financial
-                Risk Management.
+                Next to sailing I’m also a junior-level full stack web developer.
+                I love solving challenging problems and in my free time I enjoy
+                designing and building some web applications I think are pretty cool.
                 <br><br>
-                Check out some more info below, and if you're interested in working together, please get in touch!
+                In the past I have worked as a business analyst developing cloud
+                banking software, and I was part of the team at Ohpen that migrated
+                the first bank in the world completely into the cloud.
                 <br><br>
-                +44 (0)74 0772 1911
+                I'm Dutch originally, but spent the majority of my childhood in Belgium.
+                I speak fluent Dutch and English and have a degree in Investment
+                and Financial Risk Management from Cass Business School in London.
+                <br><br>
+                Feel free to check out some more information about me in the
+                sections below and if you're interested in working together,
+                please get in touch!
+                <br><br>
+                <strong>+44 (0)74 0772 1911</strong>
                 <br>
-                kk.postma@gmail.com
+                <strong>kk.postma@gmail.com</strong>
             </p>
           </div>
 
