Turns side project URLs into links

--- a/index.html
+++ b/index.html
@@ -342,7 +342,9 @@
             <div class="project-box flex-box">
               <div class="project-thumbnail" style="background-image: url(images/fixes.jpg);"></div>
               <div class="project-info">
-                <h3>playfixes.com</h3>
+                <a href="http://www.playfixes.com" target="_blank">
+                  <h3>playfixes.com</h3>
+                </a>
                 <p>A word game founded by some of my classmates at Le Wagon’s
                   coding bootcamp. After the course I started working with the
                   Fixes team to make the game even better.</p>
@@ -351,7 +353,9 @@
             <div class="project-box flex-box">
               <div class="project-thumbnail" style="background-image: url(images/brainpowered.jpg);"></div>
               <div class="project-info">
-                <h3>brainpowered.me</h3>
+                <a href="http://www.brainpowered.me"  target="_blank">
+                  <h3>brainpowered.me</h3>
+                </a>
                 <p>Together with two of my classmates at Le Wagon we built and
                    launched this web app within 10 working days. Students can
                    contribute to real projects by real companies and have a better chance at getting hired.</p>
@@ -360,7 +364,9 @@
             <div class="project-box flex-box">
               <div class="project-thumbnail" style="background-image: url(images/cocktail.jpg);"></div>
               <div class="project-info">
-                <h3>mr-cocktail-kp09.herokuapp.com</h3>
+                <a href="http://mr-cocktail-kp09.herokuapp.com"  target="_blank">
+                  <h3>mr-cocktail-kp09.herokuapp.com</h3>
+                </a>
                 <p>A fun app I built for my girlfriend and I, where we can
                    store cocktail recipes that we have made and like and share
                    them with friends.</p>
